[DS-707] Integer construction
git-svn-id: http://scm.dspace.org/svn/repo/dspace/trunk@5542 9c30dcfa-912a-0410-8fc2-9e0234be79fd